--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,10 @@
         }
     },
     "require": {
-        "php": ">=5.5"
+        "php": "^7.4|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6",
+        "phpunit/phpunit": "^9",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "suggest": {
@@ -47,7 +47,7 @@
     },
     "scripts": {
         "test": [
-            "vendor/bin/phpunit -c tests tests --disallow-test-output --coverage-clover coverage_clover.xml --whitelist src"
+            "phpunit -c tests tests --disallow-test-output --coverage-clover coverage_clover.xml --whitelist src"
         ]
     },
     "support": {
